[tool.poetry]
name = "dashboard-streamlit"
version = "0.1.0"
description = "Projeto da Alura do curso de Streamlit"
authors = ["datalopes1 <datalopes1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
plotly = "^5.24.0"
streamlit = "^1.38.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
